--- a/styles/home.scss
+++ b/styles/home.scss
@@ -1,11 +1,17 @@
 html, body { 
   max-height: 100vh; 
   max-width: 100vw; 
+  margin: 0px;
   font-family: 'Open Sans', sans-serif;
 }
 
 .wrapper {
  font-size: 14px; 
+}
+.userCount {
+  float:right;
+  padding-right:5px;
+  font-weight:700;
 }
 
 nav { 
